--- a/config.yaml
+++ b/config.yaml
@@ -2,11 +2,11 @@
 
 # If submitting to a different project to your default, uncomment line below 
 # and change project code as appropriate; also set shortpath below
-# project: v45
+project: jk72
 
 # Force payu to always find, and save, files in this scratch project directory
 # (you may need to add the corresponding PBS -l storage flag in sync_data.sh)
-# shortpath: /scratch/v45
+shortpath: /scratch/jk72
 
 queue: normal
 walltime: 3:00:00
