--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,6 @@
-contact: Add your name here
-email: Add your email address here
-created: Add the date you started the experiment here (YYYY-MM-DD)
+contact: Andrew Kiss
+email: andrew.kiss@anu.edu.au
+created: 2021-02-19
 description: |-
   1 degree ACCESS-OM2 global model configuration under interannual forcing.
   The configuration is based on that described in Kiss et al. (2020),
