set up 1deg_jra55_iaf_ensemble_albicev_0.81

--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ shortpath: /scratch/jk72
 
 queue: normalbw
 walltime: 0:45:00
-jobname: 1deg_jra55_iaf
+jobname: 1deg_jra55_iaf_ensemble_albicev_0.81
 mem: 1000GB
 
 # Model configuration
